<resources>
    <string name="app_name">Android Weather Forecast</string>

    <string name="splash_screen_image_content_description">Metaweather Logo</string>

    <string name="empty_weather_list_message">No posts weather found.</string>
    <string name="weather_load_failure_message">Error on load weather, please try again.</string>
    <string name="windspeed_label_text">Windspeed</string>
    <string name="humidity_label_text">Humidity</string>

    <string name="settings_screen_title">Settings</string>
    <string name="lisbon_label">Lisbon</string>
    <string name="sao_paulo_label">São Paulo</string>
    <string name="london_label">London</string>
</resources>