<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.lfaiska.weather.presentation.scene.settings.SettingsViewModel " />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/toolbar_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_back"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings_screen_title"
                    android:textColor="@color/white"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RadioGroup
            android:id="@+id/locations_radio_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <RadioButton
                android:id="@+id/radio_button_lisbon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lisbon_label" />

            <RadioButton
                android:id="@+id/radio_button_sao_paulo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sao_paulo_label" />

            <RadioButton
                android:id="@+id/radio_button_london"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/london_label" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>